--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <a class="nav-link " data-value="netlify" href="#netlify">Projects</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" data-value="reactNative" href="#apps">Apps</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link " data-value="casestudies" href="#casestudies">Case Studies</a>
     </li>
     <li class="nav-item">
@@ -123,7 +126,7 @@
   </div>
 
   <!--   /////react native///// -->
-  <div class='reactNative'>
+  <div class='reactNative' id='apps'>
     <div class="text-center container-fluid">
       <h1 class="text-center">React Native Apps</h1>
       <div class="row justify-content-center">
