--- a/index.html
+++ b/index.html
@@ -81,16 +81,15 @@
 
       I am certified in UX/UI design
       from Florida Atlantic University and I love to code! I am currently working with Html5, CSS3,
-      JavaScript, Jquery, and React. I am familiar with SCSS, Redux and React Native and I spend my time learning more
+      JavaScript, React and Redux. I am familiar with SCSS, JQuery and React Native and I spend my time learning more
       and more. I have been focusing on both
       design and code because I think its important to make form fit function. I have years of
-      experience of working with and managing cross functional
+      experience working with and managing cross functional
       teams to provide exceptional levels of customer service. I am certified in Google analytics and HubSpot Inbound. I
       have learned and mastered the importance of
       communication especially in multidepartment organizations. I spent several years as a professional photographer,
       working
-      long hours under pressure to capture memories, edited countless images in Adobe CC and even
-      studied Digital Marketing strategies so I am slightly familiar with SEO. I am detail oriented and work well under
+      long hours under pressure to capture memories, edited countless images in Adobe Photoshop. I am detail oriented and work well under
       pressure, especially after working with brides. Please check out some of my projects below.
 
     </p>
