--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
  
   <div class="container">
     <div class="description">
-      <h1>Ryan Hartley
+      <h1>Ryan Hartley</h1>
         <p>Front-End Developer/Designer<br>
           <!-- Photographer <br> -->
           <!-- UX/UI Designer<br> -->
@@ -81,7 +81,7 @@
         <a id="profile-link" href="https://github.com/thegirlyoucallryan" target="_blank"
           class="p rofile-link btn btn-outline-secondary btn-lg">GitHub</a>
 
-      </h1>
+      
 
     </div>
   </div>
