add mvc project

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       <h1>Projects</h1>
       <!--    <a href="https://meet-up-react.netlify.app/" target="_blank">React-App-Meetups</a> -->
 
+      <a class='from-top' href="https://forkify-mvc-recipe.netlify.app/" target="_blank">Recipe Website - MVC architecture</a>
       <a class='from-top' href="https://reactjs-expenses-app.netlify.app" target="_blank">React Expenses App</a>
       <a class='from-top' href="https://trillo-flexbox-scss.netlify.app/" target="_blank">FlexBox SCSS landing page</a>
       <a class='from-top' href="https://elleestphotography.com" target="_blank">WordPress - ElleEstPhotography.com</a>
@@ -312,13 +313,13 @@
 
     <script>
       var menu = document.getElementById('menu');
-      var closeIcon = document.getElementById('navi-toggle');
+      var icon = document.getElementById('navi-toggle');
  
       menu.addEventListener('click', handleMenuClick);
  
       function handleMenuClick(event) {
         if (event.target instanceof HTMLAnchorElement) {
-          closeIcon.checked = false;
+          icon.checked = false;
         }
       }
     </script>
