--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="col-lg-8 col-md-8 col-sm-12 desc justify-content-center">
     <h1>About Me</h1>
 
-    <p>
+    <p class="about p">
 
       I am certified in UX/UI design
       from Florida Atlantic University and I love to code! I am currently working with Html5, CSS3,
@@ -306,6 +306,8 @@
             Orlando, Florida
           </h3>
 
+          <a class="top" href="#top">Back to top of page &#8593;</a>
+
         </div>
       </div>
     </div>
@@ -425,4 +427,3 @@
                 </div>
                 -->
 
-    -->
