--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
       <a class='from-top' href="https://cine-match-js.netlify.app/" target="_blank">Movie Comparison -JavaScript with
         OMDBapi</a>
       <a class='from-top' href="https://natours-scss-pure-css.netlify.app" target="_blank">Natours SCSS Project</a>
+      <a class='from-top' href="https://thebankapp.netlify.app" target="_blank">Banking Project - Functional Programming</a>
       <a class='from-top' href="https://simple-react-image-search.netlify.app" target="_blank">React - Image Search</a>
       <a class='from-top' href="https://game-with-jonas.netlify.app" target="_blank">Least Fun Game Built with
         JavaScript</a>
