--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         OMDBapi</a>
       <a class='from-top' href="https://natours-scss-pure-css.netlify.app" target="_blank">Natours SCSS Project</a>
       <a class='from-top' href="https://thebankapp.netlify.app" target="_blank">Banking Project - Functional Programming</a>
+      <a class='from-top' href="https://scoping-styles-in-react.netlify.app/" target="_blank">To Do - Scoping styles in React</a>
       <a class='from-top' href="https://bankist-marketing-app.netlify.app" target="_blank">Banking Project - DOM Manipulation</a>
       <a class='from-top' href="https://simple-react-image-search.netlify.app" target="_blank">React - Image Search</a>
       <a class='from-top' href="https://game-with-jonas.netlify.app" target="_blank">Least Fun Game Built with
