add next.js/mongodb project

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       <h1>Projects</h1>
       <!--    <a href="https://meet-up-react.netlify.app/" target="_blank">React-App-Meetups</a> -->
 
+      <a class='from-top' href="https://nextjsmeetups.netlify.app/" target="_blank">Next.js with React and MongoDB</a>
       <a class='from-top' href="https://forkify-mvc-recipe.netlify.app/" target="_blank">Recipe Website - MVC architecture</a>
       <a class='from-top' href="https://reactjs-expenses-app.netlify.app" target="_blank">React Expenses App</a>
       <a class='from-top' href="https://trillo-flexbox-scss.netlify.app/" target="_blank">FlexBox SCSS landing page</a>
