--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <div class='netlify' id='netlify'>
       <h1>Projects</h1>
       <!--    <a href="https://meet-up-react.netlify.app/" target="_blank">React-App-Meetups</a> -->
+      <a class='from-top' href="https://appetite-atelier.netlify.app" target="_blank">Appetite Atelier - REST API with CRUD - React Navigation (Work in Progress)</a>
       <a class='from-top' href="https://craftbeer-punkapi.netlify.app/" target="_blank">Craft Beer Search - Api calls with Fetch and React</a>
       <a class='from-top' href="https://nextjsmeetups.netlify.app/" target="_blank">Next.js with React and MongoDB</a>
       <a class='from-top' href="https://forkify-mvc-recipe.netlify.app/" target="_blank">Recipe Website - MVC architecture</a>
