--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
       <a class='from-top' href="https://scoping-styles-in-react.netlify.app/" target="_blank">To Do - Scoping styles in React</a>
       <a class='from-top' href="https://bankist-marketing-app.netlify.app" target="_blank">Banking Project - DOM Manipulation</a>
       <a class='from-top' href="https://simple-react-image-search.netlify.app" target="_blank">React - Image Search</a>
-      <a class='from-top' href="https://game-with-jonas.netlify.app" target="_blank">Least Fun Game Built with
+      <!-- <a class='from-top' href="https://game-with-jonas.netlify.app" target="_blank">Least Fun Game Built with
         JavaScript</a>
       <a class='from-top' href="https://carloan-calculator.netlify.app" target="_blank">JavaScript Auto Loan
-        Calculator</a>
+        Calculator</a> -->
       <a class='from-top' href="https://youtube-video-search-reach.netlify.app" target="_blank">React Video Search</a>
 
 
